--- a/index.html
+++ b/index.html
@@ -1,12 +1,272 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kensington&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Quicksand', sans-serif; /* フォントを変更 */
+            font-family: 'Kensington', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #ffffff;
+            padding: 20px 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            margin: 50px auto;
+/*            text-align: center;*/
+            text-align: left;
+        }
+        h2, h3 {
+            font-family: 'Quicksand', serif;
+        }
+        h1 {
+            font-family: 'Quicksand', serif;
+            font-size: 40px; /* 文字を大きく */
+            font-weight: bold;
+            margin: 0;
+            padding-left: 40px; /* 左へ移動 */
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%); /* ヘッダーの中央に配置 */ /* 左側に移動 */
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+            gap: 20px;
+        }
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            font-weight: 500;
+            cursor: pointer;
+        }
+        .content-section {
+            display: none;
+            padding: 100px 0 50px;
+            text-align: left;
+        }
+        .active {
+            display: block;
+        }
+        h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #111;
+        }
+        .about-container {
+            display: flex;
+            align-items: flex-end;
+            justify-content: space-between;
+            gap: 40px;
+        }
+        .about-text {
+            flex: 1;
+            max-width: 60%;
+            text-align: left;
+        }
+        .about-text h2 {
+            font-size: 32px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .about-text p {
+            font-size: 18px;
+            line-height: 1.8;
+            color: #333;
+            margin-bottom: 15px;
+        }
+        .about-image {
+            width: 60%;
+            max-width: 550px;
+            height: auto;
+            border-radius: 8px;
+            overflow: hidden;
+            transform: translate(0%, -5%);
+        }
+        .about-image img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+        @media (max-width: 768px) {
+            .about-container {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .about-text {
+                max-width: 100%;
+            }
+            .about-image {
+                width: 50%;
+                max-width: 200px;
+                transform: none;
+            }
+        }
+        .info-section {
+            margin-top: 40px;
+        }
+        .info-section h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .info-section ul {
+            list-style: none;
+            padding: 0;
+        }
+        .info-section li {
+            font-size: 16px;
+            margin-bottom: 5px;
+        }
+        .projects-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            justify-content: center;
+            align-items: center;
+            padding: 50px 0;
+        }
+        .project-item {
+            position: relative;
+            cursor: pointer;
+            overflow: hidden;
+            background: none; /* 白いボックスを削除 */
+            box-shadow: none; /* 影を削除 */
+            border-radius: 0; /* 角の丸みを削除 */
+            padding: 0; /* 内側の余白を削除 */
+        }
+        .project-item img {
+            width: 100%;
+            height: 250px; /* 画像サイズを統一 */
+            object-fit: cover; /* 画像のアスペクト比を維持しつつトリミング */
+            display: block;
+            transition: 0.3s ease-in-out;
+        }
+        .project-item:hover img {
+            filter: brightness(70%);
+        }
+        .project-title {
+            text-align: center;
+            font-size: 16px;
+            margin-top: 10px;
+            color: #333;
+        }
+        .video-container {
+            margin: 20px auto;
+            max-width: 800px;
+        }
+        .video-container iframe {
+            width: 100%;
+            height: 450px;
+        }
+        .image-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 15px;
+            margin: 30px 0;
+        }
+        .image-gallery img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .description {
+            text-align: left;
+            margin: 30px auto;
+            max-width: 800px;
+        }
+        .publication {
+            text-align: left;
+            margin: 30px auto;
+            max-width: 800px;
+        }
+        .publication a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .publication a:hover {
+            text-decoration: underline;
+        }
+    </style>
+    <script>
+        function showSection(sectionId) {
+            document.querySelectorAll('.content-section').forEach(section => {
+                section.classList.remove('active');
+            });
+            document.getElementById(sectionId).classList.add('active');
+        }
+    </script>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>これは GitHub Pages を使って作成した Web サイトです。</p>
+<body onload="showSection('about')">
+    <header>
+        <div class="container">
+            <h1>Daiki Mayumi</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="projects.html">Project</a></li>
+                    <li><a href="publications.html">Publication</a></li>
+                    <li><a href="activities.html">Activity</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+    <section id="about" class="content-section active">
+        <div class="container">
+            <div class="about-container">
+                <div class="about-text">
+                    <h2 style="margin-top: 80px;">Daiki Mayumi</h2>
+                    <h3>Born in Hyogo, Japan, in 1998.</h3>
+                    <p>I am currently enrolled in the Ph.D course at Nara Institute of Science and Technology (NAIST) and Ulm University (Germany). My research focuses on systems that support changes in purchasing behavior and on changing behaviors towards healthier dietary habits. Specifically, I am working on the development and operation of a purchasing behavior modification system using scents, an olfactory interface to help reduce sugar intake, and a voice dialogue system that imparts knowledge about healthy eating. I also analyze and evaluate the collected data. In addition, I am involved in numerous projects, working daily on research aimed at realizing smart cities and smart lifestyles.</p>
+                </div>
+                <div class="about-image">
+                    <img src="image/pic.JPG" alt="Profile Picture">
+                </div>
+            </div>
+            <div class="info-section">
+                <h3>Education</h3>
+                <ul>
+                    <li>2024.04 - 2026.03 Ph.D Course of Institute of Communications Engineering, Ulm University, Germany</li>
+                    <li>2023.04 - 2026.03 Ph.D Course of Information Science, Nara Institute of Science and Technology, Japan</li>
+                    <li>2021.04 - 2023.03 Master of Information Science, Nara Institute of Science and Technology, Japan</li>
+                    <li>2017.04 - 2021.03 Bachelor of Engineering, Osaka Institute of Technology, Japan</li>
+                </ul>
+            </div>
+            <div class="info-section">
+                <h3 style="margin-top: 60px;">Work Experience</h3>
+                <ul>
+                    <li>2024.04 - 2026.03 NAIST Granite Program</li>
+                    <li>2024.04 - 2025.03 Kuma Foundation, Creators' Scholarship (AI)</li>
+                    <li>2023.04 - 2024.03 NAIST University Fellowships for the Creation of Innovation in Science and Technology Recipients</li>
+                    <li>2022.08 - 2023.07 (Internship) Howtelevision, Inc., Data Science Engineer</li>
+                    <li>2022.07 - 2023.06 (Joint research) Globeride, Inc., Data Analysis</li>
+                    <li>2021.05 - 2025.03 (Joint research) YOMIURI TELECASTING CORPORATION, Data Analysis</li>
+                    <li>2021.11 - 2021.12 (Internship) FAST RETAILING CO., LTD., Data Science Engineer</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
