--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         }
         .about-image {
             width: 60%;
-            max-width: 550px;
+            max-width: 40vw;
             height: auto;
             border-radius: 8px;
             overflow: hidden;
