--- a/aromanudge.html
+++ b/aromanudge.html
@@ -150,6 +150,35 @@
             margin-top: 200px; /* ヘッダーの高さを考慮して調整 */
             padding-bottom: 10px; /* 下に余白を確保 */
         }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 24px;
+                top: 30%;
+                left: 10px;
+                padding-left: 10px;
+            }
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+            gap: 20px;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-wrap: nowrap;
+                justify-content: center;
+                gap: 10px;
+            }
+
+            nav a {
+                font-size: 14px;
+                padding: 5px 10px;
+            }
+        }
     </style>
     <script>
         function openModal(src) {
