--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         }
         .container {
             width: 80%;
-            max-width: 1200px;
+            max-width: 90%;
             margin: 50px auto;
             text-align: left;
         }
@@ -123,6 +123,35 @@
                 width: 50%;
                 max-width: 200px;
                 transform: none;
+            }
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 24px;
+                top: 30%;
+                left: 10px;
+                padding-left: 10px;
+            }
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+            gap: 20px;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-wrap: nowrap;
+                justify-content: center;
+                gap: 10px;
+            }
+
+            nav a {
+                font-size: 14px;
+                padding: 5px 10px;
             }
         }
         .info-section {
