--- a/publications.html
+++ b/publications.html
@@ -124,6 +124,35 @@
                 transform: none;
             }
         }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 24px;
+                top: 30%;
+                left: 10px;
+                padding-left: 10px;
+            }
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+            gap: 20px;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-wrap: nowrap;
+                justify-content: center;
+                gap: 10px;
+            }
+
+            nav a {
+                font-size: 14px;
+                padding: 5px 10px;
+            }
+        }
         .info-section {
             margin-top: 40px;
         }
