--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         .container {
             width: 80%;
-            max-width: 1200px;
+            max-width: 90%;
             margin: 50px auto;
 /*            text-align: center;*/
             text-align: left;
