--- a/kaolid.html
+++ b/kaolid.html
@@ -26,7 +26,7 @@
         }
         .container {
             width: 80%;
-            max-width: 1200px;
+            max-width: 90%;
             margin: 50px auto; /* ヘッダーの高さを考慮し 120px に変更 */
             text-align: center;
         }
