--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         }
         .container {
             width: 80%;
-            max-width: 1200px;
+            max-width: 90%;
             margin: 50px auto;
             text-align: left;
         }
