update for smartphone

--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,10 @@
             object-fit: cover;
         }
         @media (max-width: 768px) {
+            .container {
+                width: 90%; /* 画面幅に合わせて調整 */
+                padding: 0 15px; /* スマホ用の左右余白 */
+            }
             .about-container {
                 flex-direction: column;
                 align-items: center;
