update for smartphone

--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,7 @@
             max-width: 90%;
             margin: 50px auto;
             text-align: left;
+            padding: 0 20px;
         }
         h2, h3 {
             font-family: 'Quicksand', serif;
@@ -110,6 +111,10 @@
             object-fit: cover;
         }
         @media (max-width: 768px) {
+            .container {
+                width: 90%; /* 画面幅に合わせて調整 */
+                padding: 0 15px; /* スマホ用の左右余白 */
+            }
             .about-container {
                 flex-direction: column;
                 align-items: center;
