--- a/activities.html
+++ b/activities.html
@@ -30,6 +30,7 @@
             max-width: 90%;
             margin: 50px auto;
             text-align: left;
+            padding: 0 20px;
         }
         h2, h3 {
             font-family: 'Quicksand', serif;
