--- a/activities.html
+++ b/activities.html
@@ -130,6 +130,12 @@
                 max-width: 200px;
                 transform: none;
             }
+            .publication {
+                width: 90%; /* ← 画面いっぱいにならないように調整 */
+                max-width: 100%;
+                padding: 0 15px; /* ← 左右に適度な余白を確保 */
+                margin-bottom: 50px; /* ← 画面下に余白を追加 */
+            }
         }
         @media (max-width: 768px) {
             h1 {
@@ -237,6 +243,8 @@
             text-align: left;
             margin: 30px auto;
             max-width: 1000px;
+            padding: 0 20px; /* ← 左右の余白を追加 */
+            box-sizing: border-box; /* ← 余白を確実に適用 */
         }
         .publication a {
             color: #000000 !important; /* 薄い水色系 */
