update for smartphone

--- a/publications.html
+++ b/publications.html
@@ -30,8 +30,6 @@
             max-width: 90%;
             margin: 50px auto;
             text-align: left;
-            padding: 0 20px; /* ← スマホ時の左右余白を確保 */
-            box-sizing: border-box; /* ← これを追加 */
         }
         h2, h3 {
             font-family: 'Quicksand', serif;
@@ -112,11 +110,6 @@
             object-fit: cover;
         }
         @media (max-width: 768px) {
-            .container {
-                width: 90%; /* 画面幅に合わせて調整 */
-                padding: 0 15px; /* ← スマホ用の左右余白 */
-                box-sizing: border-box; /* ← これを追加 */
-            }
             .about-container {
                 flex-direction: column;
                 align-items: center;
@@ -129,6 +122,12 @@
                 width: 50%;
                 max-width: 200px;
                 transform: none;
+            }
+            .publication {
+                width: 90%; /* ← 画面いっぱいにならないように調整 */
+                max-width: 100%;
+                padding: 0 15px; /* ← 左右に適度な余白を確保 */
+                margin-bottom: 50px; /* ← 画面下に余白を追加 */
             }
         }
         @media (max-width: 768px) {
@@ -237,6 +236,8 @@
             text-align: left;
             margin: 30px auto;
             max-width: 1000px;
+            padding: 0 20px; /* ← 左右の余白を追加 */
+            box-sizing: border-box; /* ← 余白を確実に適用 */
         }
         .publication a {
             color: #4f83e3 !important; /* 薄い水色系 */
