update for smartphone

--- a/publications.html
+++ b/publications.html
@@ -274,8 +274,8 @@
                 <ol>
                     <li>
                         松田裕貴, 榊原太一, <strong>真弓大輝</strong>, 松田裕貴, 水本旭洋, 安本慶一:“非特定テレビ視聴履歴データの放送局間統合手法,”情報処理学会論文誌, Vol.65, No.10, pp.1488-1500, 2024.
-                        <br>
-                        DOI: <a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8" target="_blank">https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8</a>
+                        <!-- <br>
+                        DOI: <a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8" target="_blank">https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8</a> -->
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Shinya Misaki, Keiichi Yasumoto:“Aromug: a Mug-type Olfactory Interface to Enhance the Sweetness Perception of Beverages,”IEEE Access, Vol.12, pp. 78366-78378, 2024.
