--- a/index.html
+++ b/index.html
@@ -117,10 +117,18 @@
                 max-width: 100%;
             }
             .about-image {
-                width: 50%;
-                max-width: 200px;
-                transform: none;
+                width: 60%;
+                max-width: 40vw;
+                height: auto;
+                border-radius: 8px;
+                overflow: hidden;
+                transform: translate(0%, -5%);
             }
+            .about-image img {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+            }          
         }
         @media (max-width: 768px) {
             h1 {
