update for smartphone

--- a/index.html
+++ b/index.html
@@ -137,14 +137,17 @@
                 left: 10px;
                 padding-left: 10px;
             }
-        }
 
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: flex-end;
-            gap: 20px;
+            nav ul {
+                list-style: none;
+                padding: 0;
+                display: flex;
+                justify-content: flex-end;
+                gap: 20px;
+            }
+            nav {
+                    margin-top: 15px; /* ← メニューバーをさらに下にずらす */
+                }
         }
 
         @media (max-width: 768px) {
