update for smartphone

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                 justify-content: center;
                 gap: 10px;
             }
-
+            header {
+                padding: 10px 0; /* ヘッダーの高さを減らす */
+            }
             nav a {
                 padding: 15px 0 0px; /* 上の余白を減らし、下を広げる */
                 display: inline-block; /* 縦の余白を適用するため */
