--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                 flex-wrap: nowrap;
                 justify-content: center;
                 gap: 10px;
+                padding-bottom: 5px; /* 下の余白を縮める */
+                margin-bottom: 0; /* 追加の余白を削除 */
             }
 
             nav a {
