--- a/index.html
+++ b/index.html
@@ -147,18 +147,27 @@
         }
 
         @media (max-width: 768px) {
+            h1 {
+                font-size: 24px;
+                top: 30%;
+                left: 10px;
+                padding-left: 10px;
+            }
             header {
                 padding: 10px 0; /* ヘッダー全体の高さを縮める */
             }
             nav ul {
                 flex-wrap: nowrap;
                 justify-content: center;
-                gap: 10px;
-                padding-bottom: -500px; /* 下の余白を縮める */
+                padding-bottom: 0px; /* 下の余白を縮める */
                 margin-bottom: 0; /* 追加の余白を削除 */
                 margin: 0;
-                padding: 0;
                 align-items: center;
+                list-style: none;
+                padding: 0;
+                display: flex;
+                justify-content: flex-end;
+                gap: 20px;
             }
 
             nav a {
