update for smartphone

--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
             nav ul {
                 flex-wrap: nowrap;
                 justify-content: center;
-                padding-bottom: 0px; /* 下の余白を縮める */
+                padding-bottom: -500px; /* 下の余白を縮める */
                 margin-bottom: 0; /* 追加の余白を削除 */
                 margin: 0;
+                padding: 0;
                 align-items: center;
                 list-style: none;
                 padding: 0;
