update for smartphone

--- a/index.html
+++ b/index.html
@@ -148,25 +148,12 @@
                 justify-content: flex-end;
                 gap: 20px;
             }
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 24px;
-                top: 30%;
-                left: 10px;
-                padding-left: 10px;
-            }
-
-            nav ul {
-                list-style: none;
+            nav li {
+                display: inline-block;
+                margin: 0;
                 padding: 0;
-                display: flex;
-                justify-content: flex-end;
-                gap: 20px;
             }
         }
-
         @media (max-width: 768px) {
             nav ul {
                 flex-wrap: nowrap;
