update for smartphone

--- a/aromug.html
+++ b/aromug.html
@@ -168,6 +168,10 @@
         }
 
         @media (max-width: 768px) {
+            header {
+                padding: 10px 0; /* スマホでは高さを縮小 */
+                min-height: 50px; /* ヘッダーの最小高さ */
+            }
             nav ul {
                 flex-wrap: nowrap;
                 justify-content: center;
