--- a/aromanudge.html
+++ b/aromanudge.html
@@ -151,6 +151,10 @@
             padding-bottom: 10px; /* 下に余白を確保 */
         }
         @media (max-width: 768px) {
+            header {
+                padding: 10px 0; /* スマホでは高さを縮小 */
+                min-height: 50px; /* ヘッダーの最小高さ */
+            }
             h1 {
                 font-size: 24px;
                 top: 30%;
