--- a/projects.html
+++ b/projects.html
@@ -127,6 +127,10 @@
             }
         }
         @media (max-width: 768px) {
+            header {
+                padding: 10px 0; /* スマホでは高さを縮小 */
+                min-height: 50px; /* ヘッダーの最小高さ */
+            }
             h1 {
                 font-size: 24px;
                 top: 30%;
