--- a/publications.html
+++ b/publications.html
@@ -239,7 +239,7 @@
         .publication {
             text-align: left;
             margin: 30px auto;
-            max-width: 1000px;
+            max-width: 1110px;
             padding: 0 20px; /* ← 左右の余白を追加 */
             box-sizing: border-box; /* ← 余白を確実に適用 */
         }
@@ -278,62 +278,52 @@
                 <ol>
                     <li>
                         松田裕貴, 榊原太一, <strong>真弓大輝</strong>, 松田裕貴, 水本旭洋, 安本慶一:“非特定テレビ視聴履歴データの放送局間統合手法,”情報処理学会論文誌, Vol.65, No.10, pp.1488-1500, 2024.
-                        <!-- <br>
-                        DOI: <a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8" target="_blank">https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8</a> -->
+                        <a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=240012&item_no=1&page_id=13&block_id=8" target="_blank">DOI</a>
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Shinya Misaki, Keiichi Yasumoto:“Aromug: a Mug-type Olfactory Interface to Enhance the Sweetness Perception of Beverages,”IEEE Access, Vol.12, pp. 78366-78378, 2024.
-                        <br>
-                        DOI: <a href="https://ieeexplore.ieee.org/document/10530960?source=authoralert" target="_blank">https://ieeexplore.ieee.org/document/10530960?source=authoralert</a>
+                        <a href="https://ieeexplore.ieee.org/document/10530960?source=authoralert" target="_blank">DOI</a>
                     </li>
                 </ol>
                 <h3>International Conference</h3>
                 <ol>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Keiichi Yasumoto: "BubblEat: Designing a Bubble-Based Olfactory Delivery for Retronasal Smell in Every Spoonful," CHI EA '25: Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems, pp.1-8, Yokohama, Japan, Apr. 26-May. 1, 2025.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/10.1145/3686215.3688376" target="_blank">https://dl.acm.org/doi/10.1145/3686215.3688376</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3686215.3688376" target="_blank">DOI</a>
                     </li>
                     <li>
                         Carolin Schindler, <strong>Daiki Mayumi</strong>, Yuki Matsuda, Niklas Rach, Keiichi Yasumoto, Wolfgang Minker: "ARCADE: An Augmented Reality Display Environment for Multimodal Interaction with Conversational Agents," The 26th ACM International Conference on Multimodal Interaction (ICMI'24), Demo, pp.85-87, San José, Costa Rica, Nov. 4-8, 2024.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/10.1145/3686215.3688376" target="_blank">https://dl.acm.org/doi/10.1145/3686215.3688376</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3686215.3688376" target="_blank">DOI</a>
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Shinya Misaki, Keiichi Yasumoto: "Kaolid: a Lid-type Olfactory Interface to Present Retronasal Smell towards Beverage Flavor Augmentation," The 13th International Conference on the Internet of Things (IoT'23), pp.1-8, Nagoya, Japan, Nov. 7-10, 2023.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/10.1145/3627050.3627056" target="_blank">https://dl.acm.org/doi/10.1145/3627050.3627056</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3627050.3627056" target="_blank">DOI</a>
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Annalena Aicher, Keiichi Yasumoto, Wolfgang Minker: "Design of a Spoken Dialogue System to Provide Food Knowledge to Users while Eating," The 13th International Conference on the Internet of Things (IoT'23), Poster, pp.154-157, Nagoya, Japan, Nov. 7-10, 2023.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/10.1145/3627050.3630728" target="_blank">https://dl.acm.org/doi/10.1145/3627050.3630728</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3627050.3630728" target="_blank">DOI</a>
                     </li>
                     <li>
                         Hiroki Matsuda, Taichi Sakakibara, <strong>Daiki Mayumi</strong>, Yuki Matsuda, Keiichi Yasumoto: "Analysis of Relationship Between Non-Identifiable TV Viewing History Data and Web Search Trends," The 12th Global Conference on Consumer Electronics (GCCE '23), pp.1109-1110, Oct. 10-13, 2023.
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Kentaro Ueda, Shinya Misaki and Keiichi Yasumoto: "Kaolid: Lid-type Olfactory Interface to Improve Taste of Beverages with Ortho-Retronasal Smell," The 20th International Conference on Pervasive Computing and Communications (PerCom '23), Demo, Atlanta, USA, pp.303-305, Mar. 13-17, 2023.
-                        <br>
-                        DOI: <a href="https://www.computer.org/csdl/proceedings-article/percom-workshops/2023/10150412/1O9TNZGDilq" target="_blank">https://www.computer.org/csdl/proceedings-article/percom-workshops/2023/10150412/1O9TNZGDilq</a>
+                        <a href="https://www.computer.org/csdl/proceedings-article/percom-workshops/2023/10150412/1O9TNZGDilq" target="_blank">DOI</a>
                     </li>
                     <li>
                         Koki Tachibana, Yuki Matsuda, Kaito Isobe, <strong>Daiki Mayumi</strong>, Takamasa Kikuchi, Hirohiko Suwa, Keiichi Yasumoto, and Kazuya Murao: “Tongaraas: Tongs for Recognizing Littering Garbage with Active Acoustic Sensing,” The 12th International Conference on the Internet of Things Workshops (IoT Workshops '22), pp.224-230, Nov. 7-10, 2022.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/10.1145/3567445.3571112" target="_blank">https://dl.acm.org/doi/10.1145/3567445.3571112</a>
+                        <a href="https://dl.acm.org/doi/10.1145/3567445.3571112" target="_blank">DOI</a>
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Shinya Misaki, Yuki Matsuda and Keiichi Yasumoto: “Aromug: Mug-type Olfactory Interface to Assist in Reducing Sugar Intake," The 5th International Workshop on Computing for Well-Being (WellComp '22), pp.183-187, Cambridge, UK, Sept. 15, 2022.
-                        <br>
-                        DOI: <a href="https://dl.acm.org/doi/abs/10.1145/3544793.3563402" target="_blank">https://dl.acm.org/doi/abs/10.1145/3544793.3563402</a>
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3544793.3563402" target="_blank">DOI</a>
                     </li>
                     <li>
                         Junko Nohara, Tomo Kusunoki, <strong>Daiki Mayumi</strong>, Yuki Matsuda, Yugo Nakamura and Emiko Iwata: “Examination of Effective Deliciousness Transmission Method That Leads to Purchasing Behavior of Yamato (Another Name for Nara, the Ancient Capital of Japan)’s Traditional Vegetable "Yamato-maru Eggplant" That Makes Full Use of Nudge Theory and Information," Poster, The 8th Asian Congress of Dietetics (ACD '22), Oct. 19-21, 2022.
                     </li>
                     <li>
                         <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Tomokazu Matsui, Shinya Misaki, Keiichi Yasumoto, Junko Nohara: “Aroma Nudges: Exploring the Effects on Shopping Behavior in a Supermarket," International Workshop on Digital Nudging and Digital Persuasion (DNDP '22), Vol.3153, pp.1-11, Mar. 29, 2022.
-                        <br>
-                        DOI: <a href="https://ceur-ws.org/Vol-3153/" target="_blank">https://ceur-ws.org/Vol-3153/</a>
+                        <a href="https://ceur-ws.org/Vol-3153/" target="_blank">DOI</a>
                     </li>
                 </ol>
                 <h3>Domestic Conference</h3>
