update work experience

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="info-section">
                 <h3 style="margin-top: -60px;">Education</h3>
                 <ul>
-                    <li>2024.04 - 2026.03 Ph.D Course of Institute of Communications Engineering, Ulm University, Germany</li>
+                    <li>2024.04 - 2026.03 Ph.D Course of Institute of Communications Engineering, Universität Ulm, Germany</li>
                     <li>2023.04 - 2026.03 Ph.D Course of Information Science, Nara Institute of Science and Technology, Japan</li>
                     <li>2021.04 - 2023.03 Master of Information Science, Nara Institute of Science and Technology, Japan</li>
                     <li>2017.04 - 2021.03 Bachelor of Engineering, Osaka Institute of Technology, Japan</li>
@@ -315,8 +315,10 @@
                 <h3 style="margin-top: 60px;">Work Experience</h3>
                 <ul>
                     <li>2024.04 - 2026.03 NAIST Granite Program</li>
+                    <li>2024.04 - 2025.03 Universität Ulm of Germany, Visiting Researcher</li>
                     <li>2024.04 - 2025.03 Kuma Foundation, Creators' Scholarship (AI)</li>
                     <li>2023.04 - 2024.03 NAIST University Fellowships for the Creation of Innovation in Science and Technology Recipients</li>
+                    <li>2023.04 - 2023.06 Universität Ulm of Germany, Visiting Researcher</li>
                     <li>2022.08 - 2023.07 (Internship) Howtelevision, Inc., Data Science Engineer</li>
                     <li>2022.07 - 2023.06 (Joint research) Globeride, Inc., Data Analysis</li>
                     <li>2021.05 - 2025.03 (Joint research) YOMIURI TELECASTING CORPORATION, Data Analysis</li>
