--- a/publications.html
+++ b/publications.html
@@ -288,7 +288,7 @@
                 <h3>International Conference</h3>
                 <ol>
                     <li>
-                        <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Keiichi Yasumoto: "BubblEat: Designing a Bubble-Based Olfactory Delivery for Retronasal Smell in Every Spoonful," CHI EA '25: Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems, pp.1-8, Yokohama, Japan, Apr. 26-May. 1, 2025.
+                        <strong>Daiki Mayumi</strong>, Yugo Nakamura, Yuki Matsuda, Keiichi Yasumoto: "BubblEat: Designing a Bubble-Based Olfactory Delivery for Retronasal Smell in Every Spoonful," In Proceedings of the 2025 CHI Conference Extended Abstracts on Human Factors in Computing Systems (CHI EA ’25), pp.1-8, Yokohama, Japan, Apr. 26-May. 1, 2025.
                         <a href="https://dl.acm.org/doi/10.1145/3686215.3688376" target="_blank">DOI</a>
                     </li>
                     <li>
