--- a/aromug.html
+++ b/aromug.html
@@ -6,6 +6,15 @@
     <title>aromug</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script>
+        function openModal(src) {
+            document.getElementById("modal-image").src = src;
+            document.getElementById("image-modal").style.display = "flex";
+        }
+        function closeModal() {
+            document.getElementById("image-modal").style.display = "none";
+        }
+    </script>
 </head>
 <body>
     <header>
