--- a/arcade.html
+++ b/arcade.html
@@ -37,13 +37,13 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Jw-PLukplxQ" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="image-gallery">
-            <img src="image/project/kaolid/kaolid.JPG" alt="kaolid Image 1" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid1.jpg" alt="kaolid Image 2" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid2.jpg" alt="kaolid Image 3" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid3.jpg" alt="kaolid Image 4" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid4.jpg" alt="kaolid Image 5" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid5.jpg" alt="kaolid Image 6" onclick="openModal(this.src)">
-            <img src="image/project/kaolid/kaolid6.jpg" alt="kaolid Image 7" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade.png" alt="arcade Image 1" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade1.jpg" alt="arcade Image 2" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade2.jpg" alt="arcade Image 3" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade3.jpg" alt="arcade Image 4" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade4.jpg" alt="arcade Image 5" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade5.jpg" alt="arcade Image 6" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade6.jpg" alt="arcade Image 7" onclick="openModal(this.src)">
         </div>
 
         <div id="image-modal" class="modal" onclick="closeModal()">
