--- a/aromanudge.html
+++ b/aromanudge.html
@@ -76,6 +76,15 @@
             </p>
 
         </div>
+        <div class="abstract">
+            <h2>Awards</h2>
+            <p>
+                <strong>「優秀講演賞」</strong>, 第15回行動変容と社会システム研究会（BCSS）/ 社会システムと情報技術研究ウィーク（WSSIT '22）
+            </p>
+            <p>
+                <strong>「学生優秀発表賞」</strong>, 2021年度 情報処理学会関西支部 支部大会
+            </p>
+        </div>
     </div>
 </body>
 </html>
