--- a/aromug.html
+++ b/aromug.html
@@ -75,6 +75,23 @@
             </p>
 
         </div>
+
+        <div class="abstract">
+            <h2>Awards</h2>
+            <p>
+                <strong>「Best Paper Award」</strong>, The 2022 ACM International Joint Conference on Pervasive and Ubiquitous Computing The 5th International Workshop on Computing for Well-Being (WellComp'22)
+            </p>
+            <p>
+                <strong>「最優秀論文賞」</strong>, マルチメディア, 分散, 協調とモバイル（DICOMO 2022）シンポジウム論文集
+            </p>
+            <p>
+                <strong>「最優秀プレゼンテーション賞」</strong>, マルチメディア, 分散, 協調とモバイル（DICOMO 2022）シンポジウム論文集
+            </p>
+            <p>
+                <strong>「実用化期待賞」</strong>, 情報処理学会 IoT行動変容学研究グループ キックオフシンポジウム
+            </p>
+
+        </div>
     </div>
 </body>
 </html>
