--- a/bubbleat.html
+++ b/bubbleat.html
@@ -40,7 +40,7 @@
             <img src="image/project/bubbleat/bubbleat.JPG" alt="BubblEat Image 1" onclick="openModal(this.src)">
             <img src="image/project/bubbleat/bubbleat5.JPG" alt="BubblEat Image 2" onclick="openModal(this.src)">
             <img src="image/project/bubbleat/bubbleat6.JPG" alt="BubblEat Image 3" onclick="openModal(this.src)">
-            <img src="image/project/bubbleat/bubbleat7.JPG" alt="BubblEat Image 4" onclick="openModal(this.src)">
+            <img src="image/project/bubbleat/bubbleat7.jpg" alt="BubblEat Image 4" onclick="openModal(this.src)">
             <img src="image/project/bubbleat/bubbleat1.jpg" alt="BubblEat Image 5" onclick="openModal(this.src)">
             <img src="image/project/bubbleat/bubbleat2.jpg" alt="BubblEat Image 6" onclick="openModal(this.src)">
             <img src="image/project/bubbleat/bubbleat3.jpg" alt="BubblEat Image 7" onclick="openModal(this.src)">
@@ -62,7 +62,7 @@
         <div class="abstract">
             <h2>Publication</h2>
             <p>
-                Daiki Mayumi, Yugo Nakamura, Yuki Matsuda, Keiichi Yasumoto: "BubblEat: Designing a Bubble-Based Olfactory Delivery for Retronasal Smell in Every Spoonful," CHI EA '25: Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems, pp.1-8, Yokohama, Japan, Apr. 26-May. 1, 2025. <a href="https://doi.org/10.1145/exampleDOI" target="_blank">DOI</a>
+                Daiki Mayumi, Yugo Nakamura, Yuki Matsuda, Keiichi Yasumoto: "BubblEat: Designing a Bubble-Based Olfactory Delivery for Retronasal Smell in Every Spoonful," CHI EA '25: Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems, pp.1-8, Yokohama, Japan, Apr. 26-May. 1, 2025. <a href="https://dl.acm.org/doi/10.1145/3706599.3720047" target="_blank">DOI</a>
             </p>
         </div>
     </div>
