--- a/kaolid.html
+++ b/kaolid.html
@@ -77,6 +77,20 @@
             </p>
 
         </div>
+
+        <div class="abstract">
+            <h2>Awards</h2>
+            <p>
+                <strong>「Best Paper Candidate Award」</strong>, The 13th International Conference on the Internet of Things (IoT'23)
+            </p>
+            <p>
+                <strong>「最優秀発表賞」</strong>, IoT行動変容学研究グループ 第3回研究会 (BTI3)
+            </p>
+            <p>
+                <strong>「優秀デモンストレーション賞」 </strong>, 第30回マルチメディア通信と分散処理ワークショップ（DPSWS2022）
+            </p>
+
+        </div>
     </div>
 </body>
 </html>
