--- a/arcade.html
+++ b/arcade.html
@@ -38,12 +38,14 @@
         </div>
         <div class="image-gallery">
             <img src="image/project/arcade/arcade.png" alt="arcade Image 1" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade1.jpg" alt="arcade Image 2" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade2.jpg" alt="arcade Image 3" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade3.jpg" alt="arcade Image 4" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade4.jpg" alt="arcade Image 5" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade5.jpg" alt="arcade Image 6" onclick="openModal(this.src)">
-            <img src="image/project/arcade/arcade6.jpg" alt="arcade Image 7" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade1.JPG" alt="arcade Image 2" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade2.JPG" alt="arcade Image 3" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade3.JPG" alt="arcade Image 4" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade4.JPG" alt="arcade Image 5" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade5.JPG" alt="arcade Image 6" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade6.JPG" alt="arcade Image 7" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade7.JPG" alt="arcade Image 8" onclick="openModal(this.src)">
+            <img src="image/project/arcade/arcade8.JPG" alt="arcade Image 9" onclick="openModal(this.src)">
         </div>
 
         <div id="image-modal" class="modal" onclick="closeModal()">
